adding github links

--- a/pt/index.html
+++ b/pt/index.html
@@ -38,6 +38,7 @@
             <div class="space-x-8 text-sm font-medium hidden md:block">
                 <a href="#sobre" class="hover:text-white transition">Especialidade</a>
                 <a href="#servicos" class="hover:text-white transition">Serviços</a>
+                <a href="https://github.com/ruimmartins" target="_blank" class="hover:text-white transition">GitHub</a>
                 <a href="#contacto" class="bg-white text-black px-4 py-2 rounded-full hover:bg-gray-200 transition">Contactar</a>
             </div>
         </div>
@@ -137,9 +138,14 @@
                     <a href="mailto:ruimmartins90@gmail.com" class="bg-white text-black px-10 py-4 rounded-xl font-bold hover:bg-gray-200 transition w-full sm:w-auto text-center">
                         Enviar Email
                     </a>
-                    <a href="https://linkedin.com/in/rui-martins-b46390159/" target="_blank" class="text-white hover:text-emerald-400 transition font-semibold">
-                        Perfil no LinkedIn →
-                    </a>
+                    <div class="flex gap-6">
+                        <a href="https://github.com/ruimmartins" target="_blank" class="text-white hover:text-emerald-400 transition font-semibold">
+                            GitHub →
+                        </a>
+                        <a href="https://linkedin.com/in/rui-martins-b46390159/" target="_blank" class="text-white hover:text-emerald-400 transition font-semibold">
+                            LinkedIn →
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
