--- a/en/index.html
+++ b/en/index.html
@@ -44,6 +44,7 @@
             <div class="space-x-8 text-sm font-medium hidden md:block">
                 <a href="#about" class="hover:text-white transition">Expertise</a>
                 <a href="#services" class="hover:text-white transition">Services</a>
+                <a href="https://github.com/ruimmartins" target="_blank" class="hover:text-white transition">GitHub</a>
                 <a href="#contact" class="bg-white text-black px-5 py-2 rounded-full hover:bg-gray-200 transition">Work With Me</a>
             </div>
         </div>
@@ -143,9 +144,14 @@
                     <a href="mailto:ruimmartins90@gmail.com" class="bg-white text-black px-10 py-4 rounded-xl font-bold hover:bg-gray-200 transition w-full sm:w-auto text-center">
                         Email Me
                     </a>
-                    <a href="https://linkedin.com/in/rui-martins-b46390159/" target="_blank" class="text-white hover:text-emerald-400 transition font-semibold">
-                        LinkedIn Profile →
-                    </a>
+                    <div class="flex gap-6">
+                        <a href="https://github.com/ruimmartins" target="_blank" class="text-white hover:text-emerald-400 transition font-semibold">
+                            GitHub →
+                        </a>
+                        <a href="https://linkedin.com/in/rui-martins-b46390159/" target="_blank" class="text-white hover:text-emerald-400 transition font-semibold">
+                            LinkedIn →
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
